# platform

./: .browserslistrc  .cerbos-hub.yaml  .env.production  .gitignore  .npmrc  .npmrc.ci  .npmrc.example  .nxdaemonrc  .nxignore  .output.txt  .pnpmrc  .precommitrc.json  .prepushrc.backup.json  .prepushrc.json  .prettierignore  .secretlintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE-LEAN.md  CLAUDE.md  CLAUDE.md.backup  CLAUDE.md.cleaned  COMMIT_MSG.tmp  COMMIT_OPTIMIZATION_GUIDE.md  CONTRIBUTING.md  DEMO.md  DEMO_MODE_COMMIT_SUMMARY.md  DEPRECATED_TESTS_MIGRATION_LOG.md  ESLINT-FIXES-TODO.md  ESLINT_IMPLEMENTATION_SUMMARY.md  ESLINT_VERIFICATION_REPORT.md  FINAL_FIX_START_ALL.md  FIX_START_ALL_RECURSION.md  GITHUB_OAUTH_CALLBACK_FIX.md  GITHUB_OAUTH_FIX_SUMMARY.md  IFLA_OMR25_link  PHASE1_COMPLETION_REPORT.md  PHASE5_CICD_MIGRATION_SUMMARY.md  PROJECT_INDEX.md  README.md  (+60 more)
.agent-os/: README.md  (+2 more)
tools/python/isbd-processor/: convert_mdx.py  gemini_isbd_processor.py  pyproject.toml  reformat_mdx.py  run_isbd_processor.sh  ses_processor.py
tools/python/isbd-processor/data/: ISBD_SES_NotebookLLM.md
tools/python/isbd-processor/data/elements.bak/: index.mdx
tools/python/isbd-processor/data/elements.bak/area0/: P1001.mdx  P1002.mdx  P1003.mdx
tools/python/isbd-processor/data/elements.bak/area1/: P1005.mdx  P1007.mdx  P1010.mdx  P1012.mdx  P1026.mdx  P1027.mdx  P1028.mdx  P1059.mdx  P1068.mdx  P1086.mdx  P1117.mdx  P1118.mdx  P1137.mdx  P1140.mdx  P1142.mdx  P1147.mdx  P1148.mdx  P1152.mdx  P1170.mdx  P1171.mdx  P1172.mdx  P1174.mdx  P1177.mdx  P1178.mdx  P1180.mdx  P1184.mdx
(+1700 files in other folders)
