[project]
name = "isbd-processor"
version = "1.0.0"
description = "Process ISBD elements using Gemini AI"
requires-python = ">=3.9"
dependencies = [
  "google-generativeai>=0.8.0",  # Using legacy SDK for stability
  "rdflib>=7.0.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.5.0",
]
